# libzedmd

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: libzedmd.yml
docs/html/: ZeDMDComm_8h_source.html  ZeDMDWiFi_8h_source.html  ZeDMD_8h.html  ZeDMD_8h_source.html  _ze_d_m_d_8h.html  _ze_d_m_d_8h_source.html  _ze_d_m_d_comm_8h_source.html  _ze_d_m_d_wi_fi_8h_source.html  annotated.html  classZeDMD-members.html  classZeDMD.html  classZeDMDComm-members.html  classZeDMDComm.html  classZeDMDWiFi-members.html  classZeDMDWiFi.html  class_ze_d_m_d-members.html  class_ze_d_m_d.html  class_ze_d_m_d_comm-members.html  class_ze_d_m_d_comm.html  class_ze_d_m_d_wi_fi-members.html  class_ze_d_m_d_wi_fi.html  classes.html  deprecated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  pages.html  structZeDMDFrame-members.html  structZeDMDFrame.html  struct_ze_d_m_d_frame-members.html  struct_ze_d_m_d_frame.html
docs/html/d1/de6/: _ze_d_m_d_8h.html  _ze_d_m_d_8h_source.html
docs/html/d2/d3c/: class_ze_d_m_d_comm-members.html
docs/html/d2/d5a/: struct_ze_d_m_d_frame.html
docs/html/d4/d8c/: _ze_d_m_d_comm_8h_source.html
docs/html/d4/d9c/: class_ze_d_m_d_comm.html
docs/html/d7/d3b/: class_ze_d_m_d_wi_fi-members.html
docs/html/da/d58/: deprecated.html
docs/html/dc/d1d/: class_ze_d_m_d-members.html
docs/html/de/d17/: class_ze_d_m_d_wi_fi.html
docs/html/de/d28/: struct_ze_d_m_d_frame-members.html
docs/html/de/d58/: _ze_d_m_d_wi_fi_8h_source.html
docs/html/de/d96/: class_ze_d_m_d.html
docs/html/search/: all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
src/: SerialPort.cpp  SerialPort.h  WinUnistd.cpp  WinUnistd.h  ZeDMD.cpp  ZeDMD.h  ZeDMDComm.cpp  ZeDMDComm.h  ZeDMDSpi.cpp  ZeDMDSpi.h  ZeDMDWiFi.cpp  ZeDMDWiFi.h  client.cpp  test.cpp
src/komihash/: komihash.h
src/miniz/: miniz.c
src/serialib/: serialib.h
test/rgb565_128x32/: 0001.raw  0002.raw  0003.raw  0004.raw  0005.raw  0006.raw  0007.raw  0008.raw  0009.raw  0010.raw  0011.raw  0012.raw  0013.raw  0014.raw  0015.raw  0016.raw  0017.raw  0018.raw  0019.raw  0020.raw  0021.raw  0022.raw  0023.raw  0024.raw  0025.raw  0026.raw  0027.raw  0028.raw  0029.raw  0030.raw  0031.raw  0032.raw  0033.raw  0034.raw  0035.raw  0036.raw  0037.raw  0038.raw  0039.raw  0040.raw  (+187 more)
test/rgb565_256x64/: 0001.raw  0002.raw  0003.raw  0004.raw  0005.raw  0006.raw  0007.raw  0008.raw  0009.raw  0010.raw  0011.raw  0012.raw  0013.raw  0014.raw  0015.raw  0016.raw  0017.raw  0018.raw  0019.raw  0020.raw  0021.raw  0022.raw  0023.raw  0024.raw  0025.raw  0026.raw  0027.raw  0028.raw  0029.raw  0030.raw  0031.raw  0032.raw  0033.raw  0034.raw  0035.raw  0036.raw  0037.raw  0038.raw  0039.raw  0040.raw  (+196 more)
test/rgb888_128x32/: 0001.raw  0002.raw  0003.raw  0004.raw  0005.raw  0006.raw  0007.raw  0008.raw  0009.raw  0010.raw  0011.raw  0012.raw  0013.raw  0014.raw  0015.raw  0016.raw  0017.raw  0018.raw  0019.raw  0020.raw  0021.raw  0022.raw  0023.raw  0024.raw  0025.raw  0026.raw  0027.raw  0028.raw  0029.raw  0030.raw  0031.raw  0032.raw  0033.raw  0034.raw  0035.raw  0036.raw  0037.raw  0038.raw  0039.raw  0040.raw  (+60 more)
test/rgb888_256x64/: 0001.raw  0002.raw  0003.raw  0004.raw  0005.raw  0006.raw  0007.raw  0008.raw  0009.raw  0010.raw  0011.raw  0012.raw  0013.raw  0014.raw  0015.raw  0016.raw  0017.raw  0018.raw  0019.raw  0020.raw  0021.raw  0022.raw  0023.raw  0024.raw  0025.raw  0026.raw  0027.raw  0028.raw  0029.raw  0030.raw  0031.raw  0032.raw  0033.raw  0034.raw  0035.raw  0036.raw  0037.raw  0038.raw  0039.raw  0040.raw  (+60 more)
